# freecnc

./: .gitignore  ChangeLog.txt  README.MOVED  README.txt  license.txt  readme.txt  todo.txt
src/: CMakeLists.txt  FreeCNC.sln  FreeCNC.vcproj  SConstruct  lua.vcproj  tmpinied.vcproj
src/freecnc/: basictypes.h  freecnc.cpp  freecnc.h  gameengine.cpp  gameengine.h  version.h
src/freecnc/game/: actioneventqueue.cpp  actioneventqueue.h  buildqueue.cpp  buildqueue.h  dispatcher.cpp  dispatcher.h  game.cpp  game.h  game_public.h  map.cpp  map.h  map_load.cpp  moneycounter.cpp  moneycounter.h  path.cpp  path.h  player.cpp  player.h  playerpool.cpp  playerpool.h  projectileanim.cpp  projectileanim.h  structure.cpp  structure.h  structureanims.cpp  structureanims.h  talkback.cpp  talkback.h  unit.cpp  unit.h  unitandstructurepool.cpp  unitandstructurepool.h  unitanimations.cpp  unitanimations.h  unitorstructure.h  weaponspool.cpp  weaponspool.h
src/freecnc/legacyvfs/: archive.h  vfile.h  vfs.cpp  vfs.h  vfs_public.h
src/freecnc/lib/: args.cpp  blowfish.cpp  blowfish.h  common.cpp  compression.cpp  compression.h  dllibrary.cpp  dllibrary.h  endian.h  fcncendian.h  inifile.cpp  inifile.h  logger.cpp  logger.h  westwood_key.cpp  westwood_key.h
src/freecnc/renderer/: cpsimage.cpp  cpsimage.h  endianutils.h  graphicsengine.cpp  graphicsengine.h  imagecache.cpp  imagecache.h  imageproc.cpp  vqa.cpp  (+11 more)
src/mix_extract/: mix_extract.cpp
src/tmpinied/: Makefile.depend  templatedata.cpp  templatedata.h  tmpgfx.cpp  tmpgfx.h  tmpinied.cpp  vfs_instance.h
src/vfscli/: vfscli.cpp
(+116 files in other folders)
