cmake_minimum_required(VERSION 2.8)
project(FreeCNC)

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system filesystem program_options REQUIRED)
FIND_PACKAGE(Lua51 REQUIRED)

SET(PROJECT_SRC_DIR "freecnc/")
link_directories(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR} ${SDLMIXER_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${LUA_INCLUDE_DIR})
FILE( GLOB_RECURSE FREECNC_SRC ${PROJECT_SRC_DIR}/*.cpp )
IF(UNIX)
FILE( GLOB_RECURSE WIN32_SRC ${PROJECT_SRC_DIR}/win32/*.cpp )
LIST(REMOVE_ITEM FREECNC_SRC ${WIN32_SRC})
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -ldl")
ENDIF(UNIX)
ADD_EXECUTABLE(freecnc-bin ${FREECNC_SRC})
TARGET_LINK_LIBRARIES(freecnc-bin ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${SDL_LIBRARY} ${SDL_MIXER_LIBRARY} ${LUA_LIBRARIES} ${CMAKE_DL_LIBS})
